p:ajax only on change SelectOneMenu value

--- a/crypfolio/web/faces/portfolio.xhtml
+++ b/crypfolio/web/faces/portfolio.xhtml
@@ -38,7 +38,7 @@
 
                         <f:selectItems value="#{portfolioBacking.currencies}"/>
 
-                        <p:ajax event="itemSelect"
+                        <p:ajax event="change"
                                 update="mainTabView:portfolioMainData"
                                 listener="#{portfolioBacking.updatePortfolioValues}"/>
 
